--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "publish": true
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "hono": "4.8.2",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-router-dom": "^7.7.1",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.7.5",
