--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "file-saver": "^2.0.5",
     "hono": "4.8.2",
+    "qrcode.react": "^4.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "^7.7.1",
@@ -25,7 +27,9 @@
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.7.5",
     "@eslint/js": "9.29.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "24.0.4",
+    "@types/qrcode.react": "^1.0.5",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@vitejs/plugin-react": "4.6.0",
