--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
+    "react-svg": "^16.3.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
