modified:   package-lock.json 	modified:   package.json 	modified:   src/react-app/App.tsx 	new file:   src/react-app/Pages/AISummarizerPage.tsx 	modified:   src/react-app/Pages/Article.tsx 	new file:   src/react-app/Pages/BillGatesMoneyPage.tsx 	new file:   src/react-app/Pages/ChequeConverterPage.tsx 	modified:   src/react-app/Pages/KinshipPage.tsx 	modified:   src/react-app/Pages/NotFoundPage.tsx 	modified:   src/react-app/components/Header.tsx 	modified:   src/react-app/data/games.json 	modified:   src/react-app/data/tools.json 	modified:   src/react-app/index.css 	modified:   src/worker/index.ts 	modified:   wrangler.json
new pages:
- AISummarizerPage
- BillGatesMoneyPage
- ChequeConverterPage
- KinshipPage
- NotFoundPage

new components:
- Header

--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "publish": true
   },
   "dependencies": {
+    "@cloudflare/ai": "^1.2.2",
     "@tailwindcss/vite": "^4.1.11",
+    "@uiw/react-md-editor": "^4.0.8",
     "file-saver": "^2.0.5",
     "hono": "4.8.2",
     "qrcode.react": "^4.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.7.1",
     "react-svg": "^16.3.0",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
